test/files/neg/t12953-expandee/Client_2.scala

//> using options -Werror -Wunused:locals -Xlint:missing-interpolator -Wmacros:before

import Macro.id

object Test extends App {
  println {
    id {
      val unusedVariable = "42".toInt
      println("hello, world of $unusedVariable")
    }
  }
}
